add test service and fix digest